<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/asynchronousTransmissionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/asynchronousTransmission"
        android:layout_alignParentTop="true"/>

    <Button
        android:id="@+id/delayedTransmissionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delayedTransmission"
        android:layout_below="@+id/asynchronousTransmissionButton"/>

    <Button
        android:id="@+id/graphQLTransmissionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/graphQLTransmission"
        android:layout_below="@+id/delayedTransmissionButton"/>

    <Button
        android:id="@+id/serializedTransmissionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/serializedTransmission"
        android:layout_below="@+id/graphQLTransmissionButton"/>

    <Button
        android:id="@+id/compressedTransmissionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/compressedTransmission"
        android:layout_below="@+id/serializedTransmissionButton"/>



</RelativeLayout>